[FIX] web: prevent too big search dropdowns
Since [this other commit], the /partners and /customers pages have
included dropdowns that allow for searching by country, industry, and
category. These dropdowns can become excessively long if there are many
entries.

Steps to reproduce the issue:
- Navigate to Contacts app
- Create several records, each with a different country
- Assign a partner level to each record
- Publish all the records on the website
- Go to /partners
- Open the dropdown to search by country

=> The list can be very long.

The issue has been fixed in the next version (17.0) by [this commit].
However, the fix is not present in the 16.4 version. This commit
backports the dropdown max height part of the fix to the 16.4 version.

[this other commit]: https://github.com/odoo/odoo/commit/f8940943592b696b4f27c0013f837a6cdecb0433
[this commit]: https://github.com/odoo/odoo/commit/4bf1384e8b8a4a990da2161b0ac8a73a318df0c9

opw-3640642

--- a/addons/web/static/src/legacy/scss/ui.scss
+++ b/addons/web/static/src/legacy/scss/ui.scss
@@ -16,6 +16,12 @@
     @include o-text-overflow;
 }
 
+.dropdown-menu {
+    max-height: 70vh;
+    overflow: auto;
+    background-clip: border-box;
+}
+
 .ui-autocomplete {
     z-index: $zindex-modal + 1;
     max-width: 600px;
